--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Toolkit Angel — Options</title>
+  <title>AIngelExt — Options</title>
   <style>
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial; margin:0; padding:18px; max-width:960px;}
     h1{font-size:18px;margin:0 0 10px;}
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>Toolkit Angel — Options</h1>
+  <h1>AIngelExt — Options</h1>
   <div class="muted">Local-first. No network calls. Controls paste + file upload gates.</div>
 
   <div class="card">
