--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Toolkit Angel</title>
+  <title>AIngelExt</title>
   <style>
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial; margin:0; padding:12px; width:380px;}
     h1{font-size:14px; margin:0 0 8px;}
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>Toolkit Angel</h1>
+  <h1>AIngelExt</h1>
   <p>If <b>PING</b> fails, use <b>Inject now</b> (forces injection using <code>activeTab</code>).</p>
   <button id="ping">Diagnostics: PING this page</button>
   <button id="inject">Fix: Inject now (active tab)</button>
