--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AIngelExt</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial; margin:0; padding:12px; width:380px;}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial; margin:0; padding:12px; width:390px;}
     h1{font-size:14px; margin:0 0 8px;}
     p{font-size:12px; margin:0 0 10px; color:#444; line-height:1.35;}
     button{width:100%; padding:10px; border-radius:10px; border:1px solid #ccc; background:#f7f7f7; cursor:pointer; font-size:13px; margin:6px 0;}
@@ -19,15 +19,17 @@
 </head>
 <body>
   <h1>AIngelExt</h1>
-  <p>If <b>PING</b> fails, use <b>Inject now</b> (forces injection using <code>activeTab</code>).</p>
+  <p>If <b>PING</b> fails, use <b>Inject now</b> (forces injection via <code>activeTab</code>).</p>
+
   <button id="ping">Diagnostics: PING this page</button>
   <button id="inject">Fix: Inject now (active tab)</button>
-  <button id="test">Self‑test: open Input Gate overlay</button>
+  <button id="test">Self-test: open Input Gate overlay</button>
+  <button id="playground">Open Playground (offline test page)</button>
   <button id="options">Open options</button>
+
   <div class="status" id="status"></div>
-  <div class="small">
-    v0.2.9: fixes Perplexity paste by blocking site paste handlers + robust insertion.
-  </div>
+  <div class="small">v0.4.3 • Local-first • No accounts • No server</div>
+
   <script src="popup.js"></script>
 </body>
 </html>
