--- a/playground.html
+++ b/playground.html
@@ -30,16 +30,10 @@
   <div class="row">
     <button id="load">Load synthetic raw test pack</button>
     <button id="detect">Detect</button>
-    <button id="redactLight">Redact (light)</button>
-    <button id="redactStrict">Redact (strict)</button>
+    <button id="redactLight">Redact</button>
+    <button id="redactStrict">Redact+</button>
     <button id="copy">Copy output</button>
-    <div class="muted">Level:</div>
-    <select id="level">
-      <option value="low">low</option>
-      <option value="medium" selected>medium</option>
-      <option value="high">high</option>
-    </select>
-    <div class="muted">Style:</div>
+<div class="muted">Style:</div>
     <select id="style">
       <option value="tag" selected>tag</option>
       <option value="mask">mask</option>
