--- a/options.html
+++ b/options.html
@@ -5,101 +5,175 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AIngelExt — Options</title>
   <style>
-    :root{--bg:#fff;--fg:#111;--muted:#555;--border:rgba(0,0,0,.14);}
+    :root{--bg:#fff;--fg:#111;--muted:#555;--border:rgba(0,0,0,.14);--accent:#1b75ff;}
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial;margin:0;padding:18px;max-width:980px;background:var(--bg);color:var(--fg);}
     h1{font-size:18px;margin:0 0 6px;}
-    .muted{color:var(--muted);font-size:12px;line-height:1.35;}
+    .muted{color:var(--muted);font-size:12px;line-height:1.45;}
     .card{border:1px solid var(--border);border-radius:16px;padding:14px;margin:12px 0;background:#fff;}
-    label{display:flex;align-items:center;gap:10px;margin:10px 0;font-size:14px;font-weight:650;}
+    .card h2{font-size:14px;margin:0 0 8px;}
+    label{display:flex;align-items:flex-start;gap:10px;margin:10px 0;font-size:14px;font-weight:750;}
+    label .desc{font-weight:550;color:var(--muted);font-size:12px;line-height:1.4;margin-top:2px;}
     select,input[type="number"]{padding:10px 12px;border-radius:14px;border:1px solid var(--border);font-size:14px;}
-    button{padding:10px 12px;border-radius:14px;border:1px solid var(--border);background:#fff;cursor:pointer;font-weight:650;}
+    button{padding:10px 12px;border-radius:14px;border:1px solid var(--border);background:#fff;cursor:pointer;font-weight:750;}
     button:hover{background:rgba(0,0,0,.03);}
     .row{display:flex;gap:12px;flex-wrap:wrap;align-items:center}
+    details{border:1px solid var(--border);border-radius:16px;padding:12px}
+    summary{cursor:pointer;font-weight:800}
     .ok{color:#0a7}
+    code{background:rgba(0,0,0,.06);padding:2px 6px;border-radius:8px}
   </style>
 </head>
 <body>
   <h1>AIngelExt — Options</h1>
-  <div class="muted">v0.4.3 • Local-first • No network calls</div>
+  <div class="muted">v0.4.7 • Local-first • No network calls</div>
 
   <div class="card">
-    <div class="row">
-      <div>
-        <div class="muted">Detection level</div>
-        <select id="mode">
-          <option value="low">Low (fewest interruptions)</option>
-          <option value="medium">Medium (recommended)</option>
-          <option value="high">High (most sensitive)</option>
-        </select>
-      </div>
-      <label><input id="autoEscalate" type="checkbox"> Auto-escalate on risk signals</label>
+    <h2>Quick setup (recommended)</h2>
+    <div class="muted">
+      Do this, then do this, then do that:
+      <b>1)</b> keep Input Gate ON,
+      <b>2)</b> keep Auto-trigger ON (so it catches paste),
+      <b>3)</b> keep Anti prompt‑injection ON (wraps pasted text as untrusted data).
     </div>
   </div>
 
   <div class="card">
-    <label><input id="enableInputGate" type="checkbox"> 🛡️ Input Gate</label>
-    <label style="font-weight:550"><input id="autoTriggerInputGate" type="checkbox"> Auto-trigger on paste</label>
-    <label style="font-weight:550"><input id="autoTriggerInputGateOnType" type="checkbox"> Auto-trigger on typing (after short pause)</label>
+    <h2>Main switches</h2>
 
-    <div class="row">
+    <label>
+      <input id="enableInputGate" type="checkbox">
       <div>
-        <div class="muted">Auto-redact default (inside the popup)</div>
-        <select id="autoRedactDefault">
-          <option value="off">off</option>
-          <option value="light">light</option>
-          <option value="strict">strict</option>
-        </select>
+        🛡️ Input Gate
+        <div class="desc">Stops you before you paste sensitive data into ChatGPT/Claude/search. Shows simple “Fix → Paste” steps.</div>
+      </div>
+    </label>
+
+    <label style="font-weight:700">
+      <input id="autoTriggerInputGate" type="checkbox">
+      <div>
+        Auto-trigger on paste
+        <div class="desc">Recommended. Opens the Input Gate automatically when you paste risky text.</div>
+      </div>
+    </label>
+
+    <label>
+      <input id="promptInjectionGuard" type="checkbox">
+      <div>
+        🧱 Anti prompt‑injection wrapper
+        <div class="desc">Recommended for long text. Wraps pasted blocks as UNTRUSTED data so the AI treats them as data, not instructions.</div>
+      </div>
+    </label>
+
+    <label>
+      <input id="enableFileUploadGate" type="checkbox">
+      <div>
+        📎 File Upload Gate
+        <div class="desc">Warns before uploading text files that may contain secrets. Can upload a redacted copy.</div>
+      </div>
+    </label>
+
+    <label>
+      <input id="enableOutputGate" type="checkbox">
+      <div>
+        📤 Gmail Send Gate
+        <div class="desc">Adds a quick “are you sure?” + verification checklist before sending in Gmail Web.</div>
+      </div>
+    </label>
+
+    <label>
+      <input id="enableActionGate" type="checkbox">
+      <div>
+        ⚠️ Action Gate
+        <div class="desc">Adds a confirmation step before irreversible actions (to avoid “oops clicks”).</div>
+      </div>
+    </label>
+  </div>
+
+  <details class="card">
+    <summary>Advanced (optional)</summary>
+
+    <div style="margin-top:10px">
+      <label style="font-weight:700">
+        <input id="autoTriggerInputGateOnType" type="checkbox">
+        <div>
+          Auto-trigger on typing
+          <div class="desc">Opens Input Gate after a short pause if risky content is being typed (more interruptions).</div>
+        </div>
+      </label>
+
+      <div class="row" style="margin:10px 0 0">
+        <div>
+          <div class="muted">Auto-redact default (inside Input Gate)</div>
+          <select id="autoRedactDefault">
+            <option value="off">off</option>
+            <option value="light">Redact</option>
+            <option value="strict">Redact+</option>
+          </select>
+        </div>
+
+        <div>
+          <div class="muted">Redaction style</div>
+          <select id="redactStyle">
+            <option value="tag">tags ([EMAIL], [IBAN], ...)</option>
+            <option value="mask">mask (keep last 4 where possible)</option>
+          </select>
+        </div>
       </div>
 
-      <div>
-        <div class="muted">Redaction style</div>
-        <select id="redactStyle">
-          <option value="tag">tags ([EMAIL], [IBAN], ...)</option>
-          <option value="mask">mask (keep last 4 where possible)</option>
-        </select>
+      <label style="font-weight:700">
+        <input id="guardWrapWithoutModal" type="checkbox">
+        <div>
+          If no sensitive data: silently wrap+paste
+          <div class="desc">When only anti prompt‑injection is enabled, wrap and paste without opening the modal.</div>
+        </div>
+      </label>
+
+      <label>
+        <input id="enableReasoningGate" type="checkbox">
+        <div>
+          🧠 Reasoning Gate (on copy)
+          <div class="desc">Adds a lightweight “label what this is” step before you copy AI output.</div>
+        </div>
+      </label>
+
+      <div class="row" style="margin-top:10px">
+        <div>
+          <div class="muted">Max inspect size (KB)</div>
+          <input id="maxTextFileKB" type="number" min="16" max="10240" step="16">
+        </div>
+        <div>
+          <div class="muted">Trace line</div>
+          <select id="traceLineMode">
+            <option value="store">store</option>
+            <option value="append">append</option>
+            <option value="off">off</option>
+          </select>
+        </div>
+      </div>
+
+      <div style="margin-top:10px">
+        <label>
+          <input id="logEnabled" type="checkbox">
+          <div>
+            Keep local log
+            <div class="desc">Stores recent gate events locally on this device (never uploaded).</div>
+          </div>
+        </label>
+
+        <div class="row">
+          <div>
+            <div class="muted">Max entries</div>
+            <input id="maxLogEntries" type="number" min="0" max="5000" step="10">
+          </div>
+          <button id="clearLog">Clear log</button>
+        </div>
+      </div>
+
+      <div class="muted" style="margin-top:10px">
+        Tip: if a page doesn’t show the gate, check extension “Site access” and reload the tab.
       </div>
     </div>
-  </div>
-
-  <div class="card">
-    <label><input id="promptInjectionGuard" type="checkbox"> 🧱 Wrap pasted content as data (anti prompt-injection)</label>
-    <label style="font-weight:550"><input id="guardWrapWithoutModal" type="checkbox"> If no sensitive data: silently wrap+paste</label>
-  </div>
-
-  <div class="card">
-    <label><input id="enableReasoningGate" type="checkbox"> 🧠 Reasoning Gate (on copy)</label>
-    <label><input id="enableOutputGate" type="checkbox"> 📤 Output Gate (Gmail Send)</label>
-    <label><input id="enableActionGate" type="checkbox"> ⚠️ Action Gate (irreversible clicks)</label>
-  </div>
-
-  <div class="card">
-    <label><input id="enableFileUploadGate" type="checkbox"> 📎 File Upload Gate</label>
-    <div class="row">
-      <div>
-        <div class="muted">Max inspect size (KB)</div>
-        <input id="maxTextFileKB" type="number" min="16" max="10240" step="16">
-      </div>
-      <div>
-        <div class="muted">Trace line</div>
-        <select id="traceLineMode">
-          <option value="store">store</option>
-          <option value="append">append</option>
-          <option value="off">off</option>
-        </select>
-      </div>
-    </div>
-  </div>
-
-  <div class="card">
-    <label><input id="logEnabled" type="checkbox"> Keep local log</label>
-    <div class="row">
-      <div>
-        <div class="muted">Max entries</div>
-        <input id="maxLogEntries" type="number" min="0" max="5000" step="10">
-      </div>
-      <button id="clearLog">Clear log</button>
-    </div>
-  </div>
+  </details>
 
   <div class="row">
     <button id="save">Save</button>
