--- a/popup.html
+++ b/popup.html
@@ -5,30 +5,59 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AIngelExt</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial; margin:0; padding:12px; width:390px;}
-    h1{font-size:14px; margin:0 0 8px;}
-    p{font-size:12px; margin:0 0 10px; color:#444; line-height:1.35;}
-    button{width:100%; padding:10px; border-radius:10px; border:1px solid #ccc; background:#f7f7f7; cursor:pointer; font-size:13px; margin:6px 0;}
-    button:hover{background:#efefef;}
+    :root{--fg:#111;--muted:#555;--border:rgba(0,0,0,.14);--bg:#fff;--card:rgba(0,0,0,.03);--accent:rgba(27,117,255,.12);}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial; margin:0; padding:12px; width:390px; color:var(--fg); background:var(--bg);}
+    h1{font-size:15px; margin:0 0 8px; font-weight:800;}
+    h2{font-size:13px; margin:12px 0 6px; font-weight:850;}
+    p{font-size:12px; margin:0 0 10px; color:var(--muted); line-height:1.35;}
+    .card{background:var(--card); border:1px solid var(--border); border-radius:14px; padding:10px; margin:10px 0;}
+    .steps{margin:6px 0 0; padding-left:18px;}
+    .steps li{margin:5px 0; font-size:12px; color:var(--muted);}
+    .steps b{color:var(--fg);}
+    button{width:100%; padding:10px; border-radius:12px; border:1px solid var(--border); background:#fff; cursor:pointer; font-size:13px; margin:6px 0; font-weight:700;}
+    button:hover{background:rgba(0,0,0,.03);}
+    .primary{background:var(--accent); border-color:rgba(27,117,255,.35);}
     .status{margin-top:10px; font-size:12px; white-space:pre-wrap;}
     .ok{color:#0a7;}
     .bad{color:#a00;}
-    code{background:#eee; padding:1px 4px; border-radius:6px;}
-    .small{font-size:11px;color:#666;line-height:1.35;margin-top:8px;}
+    details{border:1px solid var(--border); border-radius:14px; padding:8px 10px; background:#fff;}
+    details summary{cursor:pointer; user-select:none; font-weight:800; font-size:12px; color:var(--fg);}
+    .small{font-size:11px;color:#666;line-height:1.35;margin-top:10px;}
   </style>
 </head>
 <body>
   <h1>AIngelExt</h1>
-  <p>If <b>PING</b> fails, use <b>Inject now</b> (forces injection via <code>activeTab</code>).</p>
 
-  <button id="ping">Diagnostics: PING this page</button>
+  <div class="card">
+    <h2>Instructions:</h2>
+    <ol class="steps">
+      <li><b>Step 1</b> — Click <b>PING</b> on the page where you want protection.</li>
+      <li><b>Step 2</b> — If it fails, click <b>Inject now</b>.</li>
+      <li><b>Step 3</b> — Reload the page tab (Ctrl+R).</li>
+    </ol>
+    <p style="margin-top:8px;">Note: the browser address bar / built‑in New Tab search box cannot be protected by extensions unless the New Tab is replaced (we do NOT replace it). You are protected on normal web pages (e.g., google.com, bing.com, chatgpt.com, mail.google.com).</p>
+  </div>
+
+  <button class="primary" id="ping">Diagnostics: PING this page</button>
   <button id="inject">Fix: Inject now (active tab)</button>
-  <button id="test">Self-test: open Input Gate overlay</button>
+  <button id="test">Self-test: open protection overlay</button>
   <button id="playground">Open Playground (offline test page)</button>
   <button id="options">Open options</button>
 
+  <details style="margin-top:10px;">
+    <summary>What do “Hypothesis” and “Copy + trace” mean?</summary>
+    <p style="margin-top:8px;">
+      These appear when you copy longer text from an AI answer (ChatGPT/Claude/etc.).
+    </p>
+    <ul style="margin:6px 0 0; padding-left:18px; color:var(--muted); font-size:12px;">
+      <li><b>Copy</b>: copies the text as-is.</li>
+      <li><b>Hypothesis</b>: prepends a clear label that the text is unverified, then copies it.</li>
+      <li><b>Copy + trace</b>: appends a short “trace line” so recipients know it was AI-assisted.</li>
+    </ul>
+  </details>
+
   <div class="status" id="status"></div>
-  <div class="small">v0.4.3 • Local-first • No accounts • No server</div>
+  <div class="small">v0.5.3 • Local-first • No accounts • No server</div>
 
   <script src="popup.js"></script>
 </body>
